# Module7Mini-Project

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  deploy.sh  index.html  requirements.txt  thanks.html
.github/workflows/: deploy.yml  gh-pages.yml
backend/: .env.example  config.json  requirements.txt
backend/api/: app.py
docs/: index.html
docs/html/: index.html
docs/learning_lab/: index.html
profile/: README.md
projects/: database_forensics.sql  index.html  malware_analyzer.py  network_scanner.py  requirements.txt  vulnerability_scanner.cpp
projects/cpp_learning_lab/: CMakeLists.txt  README.md
projects/cpp_learning_lab/curriculum/: README.md
projects/cpp_learning_lab/curriculum/labs/drivers/exercises/: driver_exercises.hpp
projects/cpp_learning_lab/curriculum/labs/drivers/include/: driver_framework.hpp  network_driver.hpp
projects/cpp_learning_lab/curriculum/labs/memory/: MODULE.md  README.md
projects/cpp_learning_lab/curriculum/labs/memory/exercises/: pool_allocator_exercises.hpp  slab_advanced_exercises.hpp  slab_basic_exercises.hpp
projects/cpp_learning_lab/curriculum/labs/memory/final_project/: README.md
projects/cpp_learning_lab/curriculum/labs/memory/include/: allocator.hpp  buddy_allocator.hpp  pool_allocator.hpp  slab_allocator.hpp
projects/cpp_learning_lab/curriculum/labs/memory/psets/pset1/: README.md
projects/cpp_learning_lab/curriculum/labs/os_dev/lab1/: ADVANCED_EXERCISES.md  BOOTLOADER.md  BOOTLOADER_CONCEPTS.md  EXERCISES.md  bootloader.asm  debug.inc  grub.cfg  kernel.cpp  linker.ld  stage2.asm  utils.inc
projects/cpp_learning_lab/curriculum/lectures/week1/: modern_cpp.md
projects/cpp_learning_lab/curriculum/psets/pset1/: custom_allocator.hpp
projects/cpp_learning_lab/curriculum/tutorials/advanced/: memory_management.md
projects/cpp_learning_lab/docs/: build.sh  getting_started.md
projects/cpp_learning_lab/docs/os_dev/: README.md
projects/cpp_learning_lab/examples/: CMakeLists.txt
projects/cpp_learning_lab/os_lab/: CMakeLists.txt
projects/cpp_learning_lab/os_lab/bootloader/: stage1.asm
projects/cpp_learning_lab/os_lab/kernel/: kernel.cpp
projects/cpp_learning_lab/sandbox/: CMakeLists.txt  interactive_sandbox.cpp
projects/cpp_learning_lab/tests/: CMakeLists.txt
projects/cpp_learning_lab/tutorials/: CMakeLists.txt
projects/cpp_learning_lab/tutorials/01_basics/: hello_world.cpp
projects/ghost_os_cpp/: CMakeLists.txt  Doxyfile  README.md
projects/ghost_os_cpp/.github/workflows/: ci.yml
projects/ghost_os_cpp/docs/: README.md
projects/ghost_os_cpp/docs/html/: annotated.html  annotated_dup.js  classes.html  classghost_1_1memory_1_1_memory_manager-members.html  classghost_1_1memory_1_1_memory_manager.html  classghost_1_1memory_1_1_memory_manager.js  classghost_1_1os_1_1_os_toolkit-members.html  classghost_1_1os_1_1_os_toolkit.html  classghost_1_1os_1_1_os_toolkit.js  classghost_1_1os_1_1_os_toolkit_1_1_impl-members.html  classghost_1_1os_1_1_os_toolkit_1_1_impl.html  classghost_1_1os_1_1_os_toolkit_1_1_impl.js  classghost_1_1os_1_1_os_toolkit_error-members.html  classghost_1_1os_1_1_os_toolkit_error.html  classghost_1_1os_1_1_os_toolkit_error.js  classghost_1_1os_1_1_platform_ops-members.html  classghost_1_1os_1_1_platform_ops.html  classghost_1_1os_1_1_platform_ops.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_94d7edf6f8f3d9af5fd63c44172da41c.html  dir_94d7edf6f8f3d9af5fd63c44172da41c.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  files.html  functions.html  functions_func.html  functions_vars.html  hierarchy.html  hierarchy.js  index.html  memory__manager_8cpp.html  memory__manager_8cpp_source.html  memory__manager_8hpp.html  memory__manager_8hpp.js  memory__manager_8hpp_source.html  menudata.js  namespaceghost.html  namespaceghost.js  namespaceghost_1_1memory.html  (+22 more)
projects/ghost_os_cpp/docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  files_0.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  namespaces_0.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  variables_6.js
projects/ghost_os_cpp/include/: arm_ops.hpp  memory_manager.hpp  os_toolkit.hpp
projects/ghost_os_cpp/src/: memory_manager.cpp  os_toolkit.cpp
projects/ghost_os_cpp/src/memory/: memory_manager.cpp  memory_manager.hpp
projects/ghost_os_cpp/tests/: CMakeLists.txt  memory_manager_test.cpp  os_toolkit_test.cpp
projects/ghost_os_cpp/tests/memory/: memory_manager_test.cpp
projects/ghost_os_toolkit/: Cargo.toml
projects/ghost_os_toolkit/src/: arm.rs  lib.rs  linux.rs  monitor.rs  windows.rs
projects/linux_learning_lab/: README.md
projects/linux_learning_lab/als/config/: system.yaml
projects/linux_learning_lab/als/scripts/: build_system.py  package_manager.py  system_configurator.py
projects/linux_learning_lab/blfs/docs/: getting_started.md
projects/linux_learning_lab/docs/: setup.md
projects/linux_learning_lab/lfs/docs/: chapter1.md  chapter2.md  chapter3.md  chapter4.md
projects/linux_learning_lab/lfs/labs/: chapter1_labs.md  chapter2_labs.md  chapter4_labs.md
projects/linux_learning_lab/lfs/scripts/: build_toolchain.sh  verify_build.sh
projects/rust_security_tools/: Cargo.toml  README.md
projects/rust_security_tools/docs/: index.html
projects/rust_security_tools/src/: integrity_checker.rs  main.rs  packet_analyzer.rs  port_scanner.rs
scripts/: verify_deployment.sh
src/css/: notifications.css  styles.css
src/js/: main.js  script.js
tests/: CMakeLists.txt
